--- a/src/app/Component/Creation/creation-editions/creation-editions.component.scss
+++ b/src/app/Component/Creation/creation-editions/creation-editions.component.scss
@@ -19,3 +19,21 @@
 img{
   height: 17rem;
 }
+.wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  z-index: 1002;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 80%;
+  height: 80%;
+}
+
+.spinner-wrapper {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
