--- a/src/app/Component/Creation/creation-editions/creation-editions.component.html
+++ b/src/app/Component/Creation/creation-editions/creation-editions.component.html
@@ -5,6 +5,21 @@
   <app-bouton class="bouton curseur" name="Générer le QCM" (click)="generateQCM()"></app-bouton>
   <app-bouton *ngIf="isGenerate" class="bouton curseur" name="Télécharger"></app-bouton>
 </div>
+<mat-form-field appearance="fill">
+  <mat-label>Classe</mat-label>
+  <mat-select [formControl]="classesForm" (selectionChange)="onClasseChange($event)">
+    <mat-option *ngFor="let classe of classesList" [value]="classe">{{classe}}</mat-option>
+  </mat-select>
+</mat-form-field>
+
+
+<mat-form-field appearance="fill">
+  <mat-label>Groupe</mat-label>
+  <mat-select [formControl]="classesForm" (selectionChange)="onGroupeChange($event)">
+    <mat-option *ngFor="let groupe of groupesList" [value]="groupe">{{groupe}}</mat-option>
+  </mat-select>
+</mat-form-field>
+<div class="wrapper-main" *ngIf="errormessage !== ''">{{errormessage}}</div>
 <div *ngIf="!isGenerate"class="wrapper-main">
   <p>Aucun PDF n'a été généré pour le moment, appuyez sur <b>Générer le QCM</b></p>
   <img src="assets/img/generate.svg" alt="image pdf qcm absent"/>
