--- a/src/app/Component/Creation/creation-editions/creation-editions.component.scss
+++ b/src/app/Component/Creation/creation-editions/creation-editions.component.scss
@@ -1,3 +1,9 @@
+.mat-form-field,{
+  display: flex;
+  margin-top: 1rem;
+  justify-content: space-around;
+}
+
 .wrapper-bouton{
   display: flex;
   flex-direction: row;
