--- a/src/app/Component/classegroupes/classegroupes.component.html
+++ b/src/app/Component/classegroupes/classegroupes.component.html
@@ -20,13 +20,18 @@
     </ng-container>
 
     <!-- Group Column -->
-    <ng-container matColumnDef="groupes">
+    <ng-container matColumnDef="join">
       <th mat-header-cell *matHeaderCellDef> Récupérer la classe </th>
       <td mat-cell *matCellDef="let classe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="ownClasse(classe)">Ajouter à mes classes</button></td>
     </ng-container>
 
+    <ng-container matColumnDef="unownclass">
+      <th mat-header-cell *matHeaderCellDef> Supprimer de mes classes </th>
+      <td mat-cell *matCellDef="let classe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="removeClasse(classe)">Supprimer de mes classes</button></td>
+    </ng-container>
+
     <!-- Profil Column -->
-    <ng-container matColumnDef="join">
+    <ng-container matColumnDef="groupes">
       <th mat-header-cell *matHeaderCellDef> Groupes </th>
       <td mat-cell *matCellDef="let classe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="showGroups(classe)">Groupes</button></td>
     </ng-container>
@@ -63,6 +68,10 @@
       <td mat-cell *matCellDef="let groupe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="ownGroup(groupe)">Ajouter à mes groupes</button></td>
     </ng-container>
 
+    <ng-container matColumnDef="unowngroup">
+      <th mat-header-cell *matHeaderCellDef> Supprimer de mes groupes </th>
+      <td mat-cell *matCellDef="let groupe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="removeGroupe(groupe)">Supprimer de mes groupes</button></td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumnsGroupes"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumnsGroupes;"></tr>
