--- a/src/app/Component/tableau-etudiants/tableau-etudiants.component.scss
+++ b/src/app/Component/tableau-etudiants/tableau-etudiants.component.scss
@@ -1,5 +1,6 @@
 .card{
   width: 90%;
+  margin-right: 10px;
   border-radius: 10px 10px 50px 50px;
 }
 .searchBar{
@@ -35,6 +36,46 @@ table{
 }
 .mat-cell,.mat-header-cell {
   text-align: center;
+}
+.unselected{
+  border: none;
+  background: none;
+  display: inline-block;
+  width: 100%;
+  height: 40px;
+  border-radius: 0px 0px 50px 50px;
+  color: #fff;
+  transition: all .1s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: lighten(#3F51B5, 15%);
+    z-index: -2;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: lighten(#3F51B5, 15%);
+    transition: all .2s;
+    z-index: -1;
+  }
+  &:hover {
+    color: #fff;
+    &:before {
+      width: 100%;
+    }
+  }
 }
 .add {
   border: none;
